--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,6 +35,7 @@ subjects:
 - !lcsh 'Dinsmore, Elsie (Fictitious character) -- Juvenile fiction'
 - !lcsh 'Domestic fiction'
 - !lcc 'PZ'
+- GITenberg
 title: "Elsie's New Relations\r\nWhat They Did and How They Fared at Ion; A Sequel\
   \ to Grandmother Elsie"
 url: http://www.gutenberg.org/ebooks/14909
